setting(#1): prettier CI 적용

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Check typescript
         run: npm run type:check
 
+      - name: Check prettier
+        run: npm run prettier
+
       - name: Check eslint
         run: npm run lint
