--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "prettier": "prettier --write **/*.{ts,tsx}"
   },
   "dependencies": {
     "axios": "^1.7.2",
