--- a/.github/workflows/create_branch_for_issue.yml
+++ b/.github/workflows/create_branch_for_issue.yml
@@ -1,17 +1,18 @@
-name: Create Branch For Issue
+name: Create Issue Branch
 on:
-  issues:
-    types: [assigned]
-  issue_comment:
-    types: [created]
-  pull_request:
-    types: [closed]
+    issues:
+        types: [assigned]
+    issue_comment:
+        types: [created]
 
 jobs:
-  create_issue_branch_job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Issue Branch
-        uses: robvanderleek/create-issue-branch@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    create_issue_branch_job:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Create Issue Branch
+          id: Create_Issue_Branch
+          uses: robvanderleek/create-issue-branch@issue-201-Feature_request_provide_the_final_branch_name_as_an_action_output
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        - name: Echo branch name
+          run: echo ${{ steps.Create_Issue_Branch.outputs.branchName }}
