--- a/.github/workflows/create_branch_for_issue.yml
+++ b/.github/workflows/create_branch_for_issue.yml
@@ -14,6 +14,16 @@ jobs:
       actions: write
       issues: write
       pull-requests: write
+      attestations: write
+      checks: write
+      contents: write
+      deployments: write
+      discussions: write
+      packages: write
+      pages: write
+      repository-projects: write
+      security-events: write
+      statuses: write
     steps:
       - name: Create Issue Branch
         uses: robvanderleek/create-issue-branch@main
