--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "styled-components": "^6.1.11",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@swc/plugin-styled-components": "^2.0.8",
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -39,7 +41,6 @@
     "msw": "^2.3.1",
     "postcss": "^8",
     "prettier": "^3.3.2",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "msw": {
