김진님 contribution 등록
Co-authored-by: chamjin <101967976+chamjin@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "",
   "contributors": [
     "JaeJin Lee <jinjinstar3@naver.com>"
+    "Jin Kim <my1luv234@gmail.com>"
   ],
   "repository": {
     "type": "github",
