--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "description": "",
   "contributors": [
-    "JaeJin Lee <jinjinstar3@naver.com>"
+    "Eunwoo Kim <gumman0620@gmail.com>"
     "Jin Kim <my1luv234@gmail.com>"
   ],
   "repository": {
