--- a/.github/workflows/create_branch_for_issue.yml
+++ b/.github/workflows/create_branch_for_issue.yml
@@ -10,22 +10,8 @@ on:
 jobs:
   create_issue_branch_job:
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
-      issues: write
-      pull-requests: write
-      attestations: write
-      checks: write
-      contents: write
-      deployments: write
-      discussions: write
-      packages: write
-      pages: write
-      repository-projects: write
-      security-events: write
-      statuses: write
     steps:
       - name: Create Issue Branch
         uses: robvanderleek/create-issue-branch@main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CI }}
