--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "start": "next start",
     "lint": "next lint",
     "type:check": "tsc --noEmit",
-    "prettier": "prettier --write **/*.{ts,tsx}"
+    "prettier": "prettier --write **/*.{ts,tsx}",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -33,6 +35,16 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.0",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-onboarding": "^8.1.11",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/nextjs": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/test": "^8.1.11",
     "@swc/plugin-styled-components": "^2.0.8",
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
@@ -52,9 +64,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "msw": "^2.3.1",
     "postcss": "^8",
     "prettier": "^3.3.2",
+    "storybook": "^8.1.11",
     "typescript": "^5"
   },
   "msw": {
