--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "jotai": "^2.8.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "^6.1.11",
-    "zustand": "^4.5.2"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.1.1",
     "@swc/plugin-styled-components": "^2.0.8",
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
