--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.15.3",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "jotai": "^2.8.4",
@@ -51,6 +52,7 @@
     "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-onboarding": "^8.1.11",
     "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.11",
     "@storybook/nextjs": "^8.1.11",
     "@storybook/react": "^8.1.11",
@@ -63,6 +65,9 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
+    "@vanilla-extract/next-plugin": "^2.4.3",
+    "@vanilla-extract/webpack-plugin": "^2.3.11",
+    "css-loader": "^7.1.2",
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "eslint": "^8.2.0",
@@ -76,10 +81,11 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "msw": "^2.3.1",
-    "postcss": "^8",
     "prettier": "^3.3.2",
     "storybook": "^8.1.11",
+    "style-loader": "^4.0.0",
     "typescript": "^5"
   },
   "msw": {
