--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@vanilla-extract/css": "^1.15.3",
+    "@vanilla-extract/dynamic": "^2.1.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "jotai": "^2.8.4",
