--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "jotai": "^2.8.4",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.11"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
@@ -52,14 +51,12 @@
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-onboarding": "^8.1.11",
-    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.11",
     "@storybook/nextjs": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/test": "^8.1.11",
     "@swc-jotai/react-refresh": "^0.1.1",
-    "@swc/plugin-styled-components": "^2.0.8",
     "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
