--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-onboarding": "^8.1.11",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.1.11",
     "@storybook/nextjs": "^8.1.11",
