--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "jotai": "^2.8.4",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
