--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": "20.14.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "env-cmd -f .env.development next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
