modify(#76):파일 경로 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "public/server.js",
-    "server.js"
+    "server.js",
+    "/src/types/declaration.d.ts"
   ],
   "exclude": ["node_modules"]
 }
