delete:include없어도 괜찮아서 지웠어용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "public/server.js",
-    "server.js",
-    "/src/types/declaration.d.ts"
+    "server.js"
   ],
   "exclude": ["node_modules"]
 }
