--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     ".next/types/**/*.ts",
     "public/server.js",
     "server.js",
-    "/src/types/declaration.d.ts"
+    "declaration.d.ts"
   ],
   "exclude": ["node_modules"]
 }
