bugfix(#76): nextenv에 문장 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "public/server.js",
-    "server.js",
-    "declaration.d.ts"
+    "server.js"
+    // "declaration.d.ts"
   ],
   "exclude": ["node_modules"]
 }
