--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": "20.14.0"
   },
   "scripts": {
-    "dev": "env-cmd -f .env.development next dev",
+    "dev": "env-cmd -f .env.local next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -46,6 +46,7 @@
     "jotai": "^2.8.4",
     "jwt-decode": "^4.0.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.167.1"
